--- a/static/css/app.css
+++ b/static/css/app.css
@@ -331,7 +331,7 @@ h2.plain {
 h3 {
     font-size: 1.1em;
     font-weight: bold;
-    margin: 15px 0px 5px 0px;
+    margin: 30px 0px 5px 0px;
 }
 
 #page a {
@@ -365,22 +365,27 @@ pre {
     font-size: 0.9em;
     background-color: #f8f8f8;
     padding: 5px 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     border: 1px solid #ddd;
 }
 
 blockquote {
     background-color: #e4e4e4;
-    padding: 5px 10px;
+    padding: 10px 10px;
 }
 
 blockquote p {
     font-size: 1em;
-    margin-bottom: 0px;
+    margin-bottom: 0px !important;
 }
 
 p {
     margin-bottom: 10px;
+}
+
+.height-400 {
+    max-height: 400px;
+    margin: 10px 0px;
 }
 
 @media only screen and (min-width: 64.063em) {
