--- a/templates/fall-2014/help/officehours.html
+++ b/templates/fall-2014/help/officehours.html
@@ -9,165 +9,175 @@
     schedule</a> to see when I am likely to be around for
   additional help.</p>
 
-<!-- Monday 
+<!-- Monday -->
 
-<div class="row-fluid office">
-  <div class="span2 day">Monday</div>
-  <div class="span2 hours">
+<div class="row office">
+  <div class="large-2 columns day">Monday</div>
+  <div class="large-2 columns hours">
+    10am - 2pm
   </div>
-  <div class="span3 hours">
-    Nozomu
+  <div class="large-3 columns hours">
+    Justin
   </div>
-  <div class="span5 hours">
-    2212 TMCB
+  <div class="large-5 columns hours">
+    2240 TMCB
   </div>
 </div>
 
-<div class="row-fluid">
-  <div class="offset2 span2 hours">
-    4 - 6pm
+<div class="row">
+  <div class="large-offset-2 large-2 columns hours">
+    1pm - 3pm
   </div>
-  <div class="span3 hours">
-    Nozomu
+  <div class="large-3 columns hours">
+    Justin
   </div>
-  <div class="span5 hours">
-    2212 TMCB
+  <div class="large-5 columns hours">
+    2240 TMCB
   </div>
 </div>
 
-<div class="row-fluid">
-  <div class="offset2 span2 hours">
-    4 - 5pm
+<div class="row">
+  <div class="large-offset-2 large-2 columns hours">
+    1pm - 2pm
   </div>
-  <div class="span3 hours">
+  <div class="large-3 columns hours">
     Prof. Zappala
   </div>
-  <div class="span5 hours">
+  <div class="large-5 columns hours">
     2228 TMCB
   </div>
 </div>
 
-<!--- Tuesday
+<!--- Tuesday -->
 
-<div class="row-fluid office">
-  <div class="span2 day">Tuesday</div>
-  <div class="span2 hours">
-    1 - 6pm
+<div class="row office">
+  <div class="large-2 columns day">Tuesday</div>
+  <div class="large-2 columns hours">
+    10am - 2pm
   </div>
-  <div class="span3 hours">
-    James
+  <div class="large-3 columns hours">
+    Mark
   </div>
-  <div class="span5 hours">
-    1058 TMCB, cubicle 17
+  <div class="large-5 columns hours">
+    2240 TMCB
   </div>
 </div>
 
-<!-- Wednesday 
-
-<div class="row-fluid office">
-  <div class="span2 day">Wednesday</div>
-  <div class="span2 hours">
-    12 - 2pm
+<div class="row">
+  <div class="large-offset-2 large-2 columns hours">
+    1pm - 3pm
   </div>
-  <div class="span3 hours">
-    Nozomu
+  <div class="large-3 columns hours">
+    Mark
   </div>
-  <div class="span5 hours">
-    2212 TMCB
+  <div class="large-5 columns hours">
+    2240 TMCB
   </div>
 </div>
 
-<div class="row-fluid">
-  <div class="offset2 span2 hours">
-    4 - 6pm
+<!-- Wednesday -->
+
+<div class="row office">
+  <div class="large-2 columns day">Wednesday</div>
+  <div class="large-2 columns hours">
+    10am - 2pm
   </div>
-  <div class="span3 hours">
-    Nozomu
+  <div class="large-3 columns hours">
+    Justin
   </div>
-  <div class="span5 hours">
-    2212 TMCB
+  <div class="large-5 columns hours">
+    2240 TMCB
   </div>
 </div>
 
-<div class="row-fluid">
-  <div class="offset2 span2 hours">
-    4 - 5
+<div class="row">
+  <div class="large-offset-2 large-2 columns hours">
+    1pm - 3pm
   </div>
-  <div class="span3 hours">
+  <div class="large-3 columns hours">
+    Justin
+  </div>
+  <div class="large-5 columns hours">
+    2240 TMCB
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-offset-2 large-2 columns hours">
+    1pm - 2pm
+  </div>
+  <div class="large-3 columns hours">
     Prof. Zappala
   </div>
-  <div class="span5 hours">
+  <div class="large-5 columns hours">
     2228 TMCB
   </div>
 </div>
 
-<!--- Thursday
+<!--- Thursday -->
 
-<div class="row-fluid office">
-  <div class="span2 day">Thursday</div>
-  <div class="span2 hours">
-    1 - 6pm
+<div class="row office">
+  <div class="large-2 columns day">Thursday</div>
+  <div class="large-2 columns hours">
+    10am - 2pm
   </div>
-  <div class="span3 hours">
-    James
+  <div class="large-3 columns hours">
+    Mark
   </div>
-  <div class="span5 hours">
-    1058 TMCB, cubicle 17
+  <div class="large-5 columns hours">
+    2240 TMCB
   </div>
 </div>
 
-<!-- Friday 
-
-<div class="row-fluid office">
-  <div class="span2 day">Friday</div>
-  <div class="span2 hours">
-    12 - 2pm
+<div class="row">
+  <div class="large-offset-2 large-2 columns hours">
+    1pm - 3pm
   </div>
-  <div class="span3 hours">
-    Nozomu
+  <div class="large-3 columns hours">
+    Mark
   </div>
-  <div class="span5 hours">
-    2212 TMCB
+  <div class="large-5 columns hours">
+    2240 TMCB
   </div>
 </div>
 
-<div class="row-fluid">
-  <div class="offset2 span2 hours">
-    4 - 6pm
+<!-- Friday -->
+
+<div class="row office">
+  <div class="large-2 columns day">Friday</div>
+  <div class="large-2 columns hours">
+    10am - 2pm
   </div>
-  <div class="span3 hours">
-    Nozomu
+  <div class="large-3 columns hours">
+    Justin
   </div>
-  <div class="span5 hours">
-    2212 TMCB
+  <div class="large-5 columns hours">
+    2240 TMCB
   </div>
 </div>
 
-<div class="row-fluid">
-  <div class="offset2 span2 hours">
-    4 - 5
+<div class="row">
+  <div class="large-offset-2 large-2 columns hours">
+    1pm - 3pm
   </div>
-  <div class="span3 hours">
+  <div class="large-3 columns hours">
+    Justin
+  </div>
+  <div class="large-5 columns hours">
+    2240 TMCB
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-offset-2 large-2 columns hours">
+    1pm - 2pm
+  </div>
+  <div class="large-3 columns hours">
     Prof. Zappala
   </div>
-  <div class="span5 hours">
+  <div class="large-5 columns hours">
     2228 TMCB
   </div>
 </div>
 
-<!-- Saturday 
-
-<div class="row-fluid office">
-  <div class="span2 day">Saturday</div>
-  <div class="span2 hours">
-    9am - 12pm
-  </div>
-  <div class="span3 hours">
-    Nozomu
-  </div>
-  <div class="span5 hours">
-    2212 TMCB
-  </div>
-</div>
--->
 {% endblock %}
