--- a/templates/fall-2014/labs/web-server-grading.html
+++ b/templates/fall-2014/labs/web-server-grading.html
@@ -27,21 +27,21 @@ include a written statement explaining the error that occured.*
 
 ## Basic Functionality
       
-{{ item("HTML File and Embedded Images",20,"Use a web browser to
+{{ item("HTML File and Embedded Images",10,"Use a web browser to
 access the server and view the index.html file provided with the
 assignment. The server should provide both the index file and the
 embedded images. This should work for a URI that is either / or
 /index.html.") }}
 
-{{ item ("Large File",10,"Use a web browser to access the server and
+{{ item ("Large File",5,"Use a web browser to access the server and
 download largefile.txt. The server should provide the entire file.")
 }}
 
-{{ item("PDF File",10,"Use a web browser to download
+{{ item("PDF File",5,"Use a web browser to download
 I-Have-A-Dream.pdf. The file should open properly in a PDF reader.")
 }}
 
-{{ item("Persistent Connection",20,"Use test script to verify that the
+{{ item("Persistent Connection",10,"Use test script to verify that the
 server uses a persistent TCP connection, allowing the client to fetch
 multiple objects during one connection. The server should also timeout
 an idle connection based on the timeout period given in the
@@ -59,25 +59,31 @@ same port number and check whether a bind error is handled
 gracefully.") }}
 
 {{ item("400 Bad Request",2,"Use test script to check that the server
-returns a 400 error for the case when the client issues a request with
-the method or URI empty.") }}
+returns a 400 error and web page for the case when the client issues a
+request with the method or URI empty.") }}
 
 {{ item("403 Forbidden",2,"Use the test script to check that the
-server returns a 403 error when the client requests a file with no
-read permissions.")  }}
+server returns a 403 error and web page when the client requests a
+file with no read permissions.")  }}
       
 {{ item("404 Not Found",2,"Use the test script to check that the
-server returns a 404 error when the client asks for a file that does
-not exist.") }}
+server returns a 404 error and web page when the client asks for a
+file that does not exist.") }}
 
 {{ item("501",2,"Use the test script to check that the server returns
-a 501 error when the client uses a method that does not exist.") }}
+a 501 error and web page when the client uses a method that does not
+exist.") }}
 
 ## Architecture
 
-{{ item("Code Review",20,"The TA will examine your code and compare it
-to your report to determine whether you have properly implemented the
-event-driven architecture, including using non-blocking I/O.") }}
+{{ item("Non-Blocking I/O",30,"The TA will test your code to be
+sure non-blocking I/O is done properly. This can be done by having
+one client send a partial request, followed by a second client sending
+a full request, followed by the rest of the first request.") }}
+
+{{ item("Idle Socket Timeout",20,"The TA will test your code to be
+sure idle sockets are timed out properly. This can be done with
+telnet.") }}
 
 {{ item("Load Test, Low Rate",25,"Use the stress test script to create
 a steady stream of requests at a low rate (10 threads busy for 10
