--- a/templates/fall-2014/help/officehours.html
+++ b/templates/fall-2014/help/officehours.html
@@ -13,37 +13,37 @@
 
 <div class="row office">
   <div class="large-2 columns day">Monday</div>
-  <div class="large-2 columns hours">
-    10am - 12pm
-  </div>
   <div class="large-3 columns hours">
+    10:00 am - 12:00 pm
+  </div>
+  <div class="large-4 columns hours">
     Justin
   </div>
-  <div class="large-5 columns hours">
+  <div class="large-3 columns hours">
     2240 TMCB
   </div>
 </div>
 
 <div class="row">
-  <div class="large-offset-2 large-2 columns hours">
-    1pm - 3pm
+  <div class="large-offset-2 large-3 columns hours">
+    2:00 pm - 4:00 pm
   </div>
-  <div class="large-3 columns hours">
+  <div class="large-4 columns hours">
     Justin
   </div>
-  <div class="large-5 columns hours">
+  <div class="large-3 columns hours">
     2240 TMCB
   </div>
 </div>
 
 <div class="row">
-  <div class="large-offset-2 large-2 columns hours">
-    1pm - 2pm
+  <div class="large-offset-2 large-3 columns hours">
+    1:00 pm - 2:00 pm
   </div>
-  <div class="large-3 columns hours">
+  <div class="large-4 columns hours">
     Prof. Zappala
   </div>
-  <div class="large-5 columns hours">
+  <div class="large-3 columns hours">
     2228 TMCB
   </div>
 </div>
@@ -52,25 +52,25 @@
 
 <div class="row office">
   <div class="large-2 columns day">Tuesday</div>
-  <div class="large-2 columns hours">
-    10am - 12:50pm
-  </div>
   <div class="large-3 columns hours">
+    10:00 am - 12:50 pm
+  </div>
+  <div class="large-4 columns hours">
     Mark
   </div>
-  <div class="large-5 columns hours">
+  <div class="large-3 columns hours">
     2240 TMCB
   </div>
 </div>
 
 <div class="row">
-  <div class="large-offset-2 large-2 columns hours">
-    2:10pm - 4:20pm
+  <div class="large-offset-2 large-3 columns hours">
+    2:10 pm - 4:20 pm
   </div>
-  <div class="large-3 columns hours">
+  <div class="large-4 columns hours">
     Mark
   </div>
-  <div class="large-5 columns hours">
+  <div class="large-3 columns hours">
     2240 TMCB
   </div>
 </div>
@@ -79,37 +79,37 @@
 
 <div class="row office">
   <div class="large-2 columns day">Wednesday</div>
-  <div class="large-2 columns hours">
-    10am - 12pm
-  </div>
   <div class="large-3 columns hours">
+    10:00 am - 12:00 pm
+  </div>
+  <div class="large-4 columns hours">
     Justin
   </div>
-  <div class="large-5 columns hours">
+  <div class="large-3 columns hours">
     2240 TMCB
   </div>
 </div>
 
 <div class="row">
-  <div class="large-offset-2 large-2 columns hours">
-    2:10pm - 4:20pm
+  <div class="large-offset-2 large-3 columns hours">
+    2:00 pm - 4:00 pm
   </div>
-  <div class="large-3 columns hours">
+  <div class="large-4 columns hours">
     Justin
   </div>
-  <div class="large-5 columns hours">
+  <div class="large-3 columns hours">
     2240 TMCB
   </div>
 </div>
 
 <div class="row">
-  <div class="large-offset-2 large-2 columns hours">
-    1pm - 2pm
+  <div class="large-offset-2 large-3 columns hours">
+    1:00 pm - 2:00 pm
   </div>
-  <div class="large-3 columns hours">
+  <div class="large-4 columns hours">
     Prof. Zappala
   </div>
-  <div class="large-5 columns hours">
+  <div class="large-3 columns hours">
     2228 TMCB
   </div>
 </div>
@@ -118,25 +118,25 @@
 
 <div class="row office">
   <div class="large-2 columns day">Thursday</div>
-  <div class="large-2 columns hours">
-    10am - 12:50pm
-  </div>
   <div class="large-3 columns hours">
+    10:00 am - 12:50 pm
+  </div>
+  <div class="large-4 columns hours">
     Mark
   </div>
-  <div class="large-5 columns hours">
+  <div class="large-3 columns hours">
     2240 TMCB
   </div>
 </div>
 
 <div class="row">
-  <div class="large-offset-2 large-2 columns hours">
-    1pm - 3pm
+  <div class="large-offset-2 large-3 columns hours">
+    2:10 pm - 4:20 pm
   </div>
-  <div class="large-3 columns hours">
+  <div class="large-4 columns hours">
     Mark
   </div>
-  <div class="large-5 columns hours">
+  <div class="large-3 columns hours">
     2240 TMCB
   </div>
 </div>
@@ -145,25 +145,37 @@
 
 <div class="row office">
   <div class="large-2 columns day">Friday</div>
-  <div class="large-2 columns hours">
-    10am - 3pm
-  </div>
   <div class="large-3 columns hours">
+    10:00 am - 12:00 pm
+  </div>
+  <div class="large-4 columns hours">
     Mark and Justin
   </div>
-  <div class="large-5 columns hours">
+  <div class="large-3 columns hours">
     2240 TMCB
   </div>
 </div>
 
 <div class="row">
-  <div class="large-offset-2 large-2 columns hours">
-    1pm - 2pm
+  <div class="large-offset-2 large-3 columns hours">
+    2:00 pm - 4:00 pm
+  </div>
+  <div class="large-4 columns hours">
+    Mark and Justin
   </div>
   <div class="large-3 columns hours">
+    2240 TMCB
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-offset-2 large-3 columns hours">
+    1:00 pm - 2:00 pm
+  </div>
+  <div class="large-4 columns hours">
     Prof. Zappala
   </div>
-  <div class="large-5 columns hours">
+  <div class="large-3 columns hours">
     2228 TMCB
   </div>
 </div>
