--- a/static/css/app.css
+++ b/static/css/app.css
@@ -260,6 +260,16 @@ body {
 
 /* Grading */
 
+.border {
+    border: 1px solid #888;
+    padding: 10px 5px;
+    margin-bottom: 10px !important;
+}
+
+.border .left {
+    margin-right: 100px;
+}
+
 .box {
     border: 1px solid #888;
     height: 10px;
@@ -282,6 +292,14 @@ body {
 .criteria {
     float: clear;
     padding-right: 20px;
+}
+
+.problem {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 100%;
+    height: 20px;
+    border-bottom: 1px solid #888;
 }
 
 /* Misc */
