--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     {% if active != "home" %}
-    <div class="contain-to-grid">
+    <div class="contain-to-grid no-print">
       <nav class="top-bar" data-topbar>
 	<ul class="title-area">
 	  <li><h1>{% block term %}{% endblock %}</h1>
@@ -52,8 +52,8 @@
     <div id="footer">
       <div class="row">
 	<div id="license">
-	  <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a> 
-	  <p>&copy 2013 Daniel Zappala</p>
+	  <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a>
+	  <p></p>
 	</div>
       </div>
     </div>
