--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@ This course covers Internet application programming in depth,
 including client-server and web applications. Topics include sockets,
 concurrency, thread-pool and event-driven architectures, experimental
 performance evaluation, web database application design, security
-issues. Languages include C++, Python, CSS, and Javascript.
+issues. Languages include C++, Python, and Javascript.
 
 # Prerequisites
 
@@ -18,6 +18,7 @@ CS 240
 
 # Course Materials
 
+* [2015 Fall]({{url_for("show",directory="fall-2015")}})
 * [2014 Fall]({{url_for("show",directory="fall-2014")}})
 * [2014 Winter]({{url_for("show",directory="winter-2014")}})
 * [2013 Fall]({{url_for("show",directory="fall-2013")}})
